[package]
name = "meta-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8" }
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15"
async-recursion = "1"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }